--- a/index.html
+++ b/index.html
@@ -129,7 +129,29 @@
               </a>
 
               <!-- Всплывающий блок -->
-              <div class="login dropdown-container"></div>
+              <div class="login dropdown-container">
+                <h2 class="dropdown-title small-title login-title">Личный кабинет</h2>
+
+                <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+
+                  <label class="visually-hidden" for="email">Введите вашу почту</label>
+                  <input class="login-input form-input" type="email" id="email" name="email" placeholder="Ваш email" value="email@example.com" required>
+                  <label class="visually-hidden" for="password">Введите ваш пароль</label>
+                  <input class="login-input form-input" type="password" id="password" name="password" placeholder="Ваш пароль" value="******" required>
+
+                  <div class="login-wrapper">
+
+                    <button class="button button-light login-button" type="submit">Войти</button>
+                    <div class="login-wrapper-links">
+                      <a class="login-link" href="#">Забыли пароль?</a>
+                      <a class="login-link" href="#">Регистрация</a>
+                    </div>
+
+                  </div>
+
+                </form>
+
+              </div>
 
             </li>
 
