--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
                 <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 
                   <label class="visually-hidden" for="email">Введите вашу почту</label>
-                  <input class="login-input form-input" type="email" id="email" name="email" placeholder="Ваш email" value="email@example.com" required>
+                  <input class="login-input input" type="email" id="email" name="email" placeholder="Ваш email" value="email@example.com" required>
                   <label class="visually-hidden" for="password">Введите ваш пароль</label>
-                  <input class="login-input form-input" type="password" id="password" name="password" placeholder="Ваш пароль" value="******" required>
+                  <input class="login-input input" type="password" id="password" name="password" placeholder="Ваш пароль" value="******" required>
 
                   <div class="login-wrapper">
 
-                    <button class="button button-light login-button" type="submit">Войти</button>
+                    <button class="button button-other login-button" type="submit">Войти</button>
                     <div class="login-wrapper-links">
                       <a class="login-link" href="#">Забыли пароль?</a>
                       <a class="login-link" href="#">Регистрация</a>
