--- a/index.html
+++ b/index.html
@@ -166,7 +166,65 @@
               </a>
 
               <!-- Всплывающий блок -->
-              <div class="basket dropdown-container"></div>
+              <div class="basket dropdown-container">
+
+                <div class="basket-content basket-content-full">
+                  <h2 class="basket-title small-title dropdown-title">Корзина</h2>
+
+                  <ul class="basket-list list-reset">
+
+                    <li class="basket-item">
+
+                      <a class="basket-link" href="#">
+
+                        <img src="images/catalog/catalog-item-1.jpg" width="46" height="46" alt="Шарик мороженого цвета малины.">
+
+                        <span class="basket-container">
+                          <h3 class="basket-subtitle small-subtitle">Малинка</h3>
+                          <span class="basket-desc">1&nbsp;кг&nbsp;х&nbsp;310&nbsp;₽</span>
+                        </span>
+
+                      </a>
+
+                      <span class="basket-price">310&nbsp;₽</span>
+
+                      <button class="basket-delete" type="button">
+                        <span class="visually-hidden">Удалить из корзины</span>
+                      </button>
+
+                    </li>
+
+                    <li class="basket-item">
+
+                      <a class="basket-link" href="#">
+
+                        <img src="images/catalog/catalog-item-4.jpg" width="46" height="46" alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
+
+                        <span class="basket-container">
+                          <h3 class="basket-subtitle small-subtitle">Бабл-гам</h3>
+                          <span class="basket-desc">1,5&nbsp;кг&nbsp;х&nbsp;320&nbsp;₽</span>
+                        </span>
+
+                      </a>
+
+                      <span class="basket-price">480&nbsp;₽</span>
+
+                      <button class="basket-delete" type="button">
+                        <span class="visually-hidden">Удалить из корзины</span>
+                      </button>
+
+                    </li>
+
+                  </ul>
+
+                  <div class="basket-check">
+                    <a class="button button-other basket-button" href="#">Оформить заказ</a>
+                    <span class="basket-total">Итого:&nbsp;790&nbsp;₽</span>
+                  </div>
+
+                </div>
+
+              </div>
 
             </li>
 
