--- a/catalog.html
+++ b/catalog.html
@@ -94,8 +94,8 @@
 
               <a class="user-link user-link-search dropdown-nav-link" href="#">
                 <span class="visually-hidden">Поиск</span>
-                <svg aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.66 6.19a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.44a.67.67 0 1 1-.94.95l-2.45-2.45Z" fill="#2D3440" />
+                <svg aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.66 6.19a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.44a.67.67 0 1 1-.94.95l-2.45-2.45Z" />
                 </svg>
               </a>
 
@@ -122,8 +122,8 @@
             <li class="user-item user-item-login dropdown">
 
               <a class="user-link user-link-login dropdown-nav-link" href="#">
-                <svg aria-hidden="true" focusable="false" width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8 1.52c0-.36.3-.66.67-.66h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H8.67a.67.67 0 0 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V2.86a.67.67 0 0 0-.67-.67H8.67A.67.67 0 0 1 8 1.52Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.33a.67.67 0 0 1 .2.47.66.66 0 0 1-.2.48L5.8 11.33a.67.67 0 1 1-.94-.94l2.2-2.2H.66a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z" fill="#2D3440" />
+                <svg aria-hidden="true" focusable="false" width="14" height="15" viewBox="0 0 14 15" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8 1.52c0-.36.3-.66.67-.66h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H8.67a.67.67 0 0 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V2.86a.67.67 0 0 0-.67-.67H8.67A.67.67 0 0 1 8 1.52Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.33a.67.67 0 0 1 .2.47.66.66 0 0 1-.2.48L5.8 11.33a.67.67 0 1 1-.94-.94l2.2-2.2H.66a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z" />
                 </svg>
                 <span class="text-login">Вход</span>
               </a>
@@ -158,15 +158,73 @@
             <li class="user-item user-item-basket dropdown">
 
               <a class="user-link user-link-basket dropdown-nav-link" href="#">
-                <svg aria-hidden="true" focusable="false" width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#2D3440" />
+                <svg aria-hidden="true" focusable="false" width="15" height="14" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" />
                 </svg>
                 <span class="visually-hidden">Корзина</span>
                 <span class="basket-counter">2 товара</span>
               </a>
 
               <!-- Всплывающий блок -->
-              <div class="basket dropdown-container"></div>
+              <div class="basket dropdown-container">
+
+                <div class="basket-content basket-content-full">
+                  <h2 class="basket-title small-title dropdown-title">Корзина</h2>
+
+                  <ul class="basket-list list-reset">
+
+                    <li class="basket-item">
+
+                      <a class="basket-link" href="#">
+
+                        <img src="images/catalog/catalog-item-1.jpg" width="46" height="46" alt="Шарик мороженого цвета малины.">
+
+                        <div class="basket-container">
+                          <h3 class="basket-subtitle small-subtitle">Малинка</h3>
+                          <span class="basket-desc">1&nbsp;кг&nbsp;х&nbsp;310&nbsp;₽</span>
+                        </div>
+
+                      </a>
+
+                      <span class="basket-price">310&nbsp;₽</span>
+
+                      <button class="basket-delete" type="button">
+                        <span class="visually-hidden">Удалить из корзины</span>
+                      </button>
+
+                    </li>
+
+                    <li class="basket-item">
+
+                      <a class="basket-link" href="#">
+
+                        <img src="images/catalog/catalog-item-4.jpg" width="46" height="46" alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
+
+                        <div class="basket-container">
+                          <h3 class="basket-subtitle small-subtitle">Бабл-гам</h3>
+                          <span class="basket-desc">1,5&nbsp;кг&nbsp;х&nbsp;320&nbsp;₽</span>
+                        </div>
+
+                      </a>
+
+                      <span class="basket-price">480&nbsp;₽</span>
+
+                      <button class="basket-delete" type="button">
+                        <span class="visually-hidden">Удалить из корзины</span>
+                      </button>
+
+                    </li>
+
+                  </ul>
+
+                  <div class="basket-check">
+                    <a class="button button-other basket-button" href="#">Оформить заказ</a>
+                    <span class="basket-total">Итого:&nbsp;790&nbsp;₽</span>
+                  </div>
+
+                </div>
+
+              </div>
 
             </li>
 
