--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 
                         <img src="images/catalog/catalog-item-1.jpg" width="46" height="46" alt="Шарик мороженого цвета малины.">
 
-                        <span class="basket-container">
+                        <div class="basket-container">
                           <h3 class="basket-subtitle small-subtitle">Малинка</h3>
                           <span class="basket-desc">1&nbsp;кг&nbsp;х&nbsp;310&nbsp;₽</span>
-                        </span>
+                        </div>
 
                       </a>
 
@@ -200,10 +200,10 @@
 
                         <img src="images/catalog/catalog-item-4.jpg" width="46" height="46" alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
 
-                        <span class="basket-container">
+                        <div class="basket-container">
                           <h3 class="basket-subtitle small-subtitle">Бабл-гам</h3>
                           <span class="basket-desc">1,5&nbsp;кг&nbsp;х&nbsp;320&nbsp;₽</span>
-                        </span>
+                        </div>
 
                       </a>
 
