--- a/catalog.html
+++ b/catalog.html
@@ -106,10 +106,8 @@
 
                   <form class="search-form" method="get" action="https://echo.htmlacademy.ru/">
 
-                    <label for="search">
-                      <span class="visually-hidden">Поиск по сайту.</span>
-                      <input class="search-input input" type="search" name="search" id="search" placeholder="Поиск по сайту">
-                    </label>
+                    <label class="visually-hidden" for="search">Поиск по сайту.</label>
+                    <input class="search-input input" type="search" name="search" id="search" placeholder="Поиск по сайту">
 
                   </form>
 
